# gmark

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml  test.md
.cargo/: audit.toml  config.toml
.github/workflows/: build-release.yml
assets/: custom-language.example.jsonc  custom-theme.example.jsonc
assets/icon/: README.md
benches/: blink_throttle.rs  borrowed_str_params.rs  build_text_runs.rs  exporter_inline_walker.rs  font_fallbacks_cache.rs  grapheme_cursor.rs  html_attr_parser.rs  i18n_arc.rs  known_length_collect.rs  matches_sequence.rs  menu_labels_dedup.rs  normalize_reference_label.rs  os_string_lossy.rs  projection_cache.rs  render_loop.rs  shared_display_text.rs  spacing_infos_lazy.rs  table_cells_collect.rs  theme_arc.rs
benches/common/: mod.rs
crates/gmark-document/: Cargo.toml
crates/gmark-document-core/: Cargo.toml
crates/gmark-document-runtime/: Cargo.toml
crates/gmark-document-runtime/src/: lib.rs  resident.rs  tests.rs
crates/gmark-document/src/: atomic_save.rs  document.rs  lib.rs  source_format.rs
crates/gmark-document/tests/: atomic_save_behavior.rs  document_behavior.rs
crates/gmark-document/tests/unit/: atomic_save.rs
crates/gmark-fuzz-support/: Cargo.toml
crates/gmark-fuzz-support/src/: lib.rs
crates/gmark-fuzz-support/tests/: corpus_replay.rs
crates/gmark-json-graph/: Cargo.toml
crates/gmark-json-graph/src/: lib.rs
crates/gmark-json-graph/tests/: provider.rs
crates/gmark-large-document/: Cargo.toml
crates/gmark-large-document/examples/: generate_fixture.rs  large_file_probe.rs  large_file_save_probe.rs
crates/gmark-large-document/src/: backend.rs  delimited.rs  encoding.rs  index.rs  json.rs  lib.rs  markdown_table.rs  piece.rs  probe.rs  recovery.rs  source.rs  view.rs
crates/gmark-large-document/src/index_parts/: sidecar.rs
crates/gmark-large-document/src/json_parts/: parser.rs
crates/gmark-large-document/src/piece_parts/: document.rs
crates/gmark-large-document/tests/: derived_view_contract.rs  large_document_behavior.rs  structured_document_behavior.rs
crates/gmark-large-document/tests/unit/: delimited.rs  json.rs  piece.rs
crates/gmark-paged-document/: Cargo.toml
crates/gmark-recovery-codec/: Cargo.toml
crates/gmark-recovery-codec/src/: lib.rs
crates/gmark-recovery-codec/tests/unit/: tests.rs
docs/: document-architecture.md
examples/: render_app_icons.rs
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/recovery_journal_frames/: bad-flags.seed  bad-kind.seed  bad-version.seed  concatenated.seed  crc-tail.seed  oversized-length.seed  truncated.seed  valid-base.seed  valid-edit.seed
fuzz/corpus/source_document_transactions/: ascii.seed  history.seed  invalid.seed  markdown.seed  newlines.seed  unicode.seed
fuzz/fuzz_targets/: markdown_parser.rs  recovery_journal_frames.rs  source_document_transactions.rs
resources/linux/: com.kongweiguang.gmark.desktop
resources/macos/: Info.plist  gmark.icns
scripts/: build-and-run-large-file-idle-soak.ps1  check-large-file-accessibility-linux.sh  check-large-file-accessibility.ps1  create-update-manifest.py  create_macos_app_dist.sh  create_macos_pkg_dist.sh  generate-recovery-fuzz-corpus.py  import-markdown-spec-corpus.py  linux-artifact-signing.py  measure-startup.ps1  monitor-soak.ps1  package-app-icons.py  package-linux-installers.sh  package-macos-dmg.sh  release-artifact-manifest.py  release_crypto.py  run-large-file-interactive-soak.ps1  sign-windows-package.ps1  smoke-linux-installers.sh  smoke-linux-package.sh  smoke-macos-dmg.sh  smoke-macos-package.sh  smoke-windows-installer.ps1  smoke-windows-package.ps1  test-linux-artifact-signing.py  test-linux-package-smoke.sh  test-macos-package-smoke.sh  test-monitor-soak.ps1  test-release-artifact-manifest.py  test-release-packaging.ps1  test-update-manifest.sh  validate-workflows.py  verify-audit-exceptions.py  verify-update-manifest.py  wait-and-run-large-file-interactive-soak.ps1
src/: accessibility.rs  app_identity.rs  app_menu.rs  cli.rs  crash_report.rs  document_host.rs  document_io.rs  file_url.rs  large_file.rs  lib.rs  main.rs  perf.rs  recovery.rs  single_instance.rs  spellcheck.rs  ui.rs  window_chrome.rs
src/net/: mod.rs  (+1 more)
tests/: document_backend_contract.rs  markdown_spec_corpus.rs
xtask/: Cargo.toml
(+323 files in other folders)
