# @author kongweiguang

[package]
name = "gmark-document"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
tempfile = "=3.27.0"
thiserror = "2"
zed-rope = { package = "rope", git = "https://github.com/zed-industries/zed", rev = "63692b8b4724357fa63d6318b45f3c3fee6f672a" }

[dev-dependencies]
tempfile = "=3.27.0"
