# @author kongweiguang

[package]
name = "gmark-fuzz-support"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
gmark-document = { path = "../gmark-document" }
gmark-recovery-codec = { path = "../gmark-recovery-codec" }
