# @author kongweiguang

[package]
name = "gmark-recovery-codec"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
crc32fast = "1"
thiserror = "2"
